Remove all images from homepage

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>jQuery - CSS Gradients</title>
     <meta name="description" content="">
 
     <link rel="stylesheet" href="css/vendor/normalize.min.css">
@@ -11,7 +11,6 @@
 <body>
 
     <article id="wikiArticle">
-
 
                         <p></p><section id="Quick_Links" class="Quick_links"><!-- --></section><p></p>
 
@@ -53,7 +52,7 @@
        <td class="header">Live Demo</td>
       </tr>
       <tr>
-       <td><img src="/@api/deki/files/3950/=basic_linear_bluetop.png" style="text-align: center;" alt=""></td>
+       <td></td>
        <td>
         <div style=""> </div>
        </td>
@@ -82,7 +81,7 @@
        <td class="header">Live Demo</td>
       </tr>
       <tr>
-       <td><img src="/@api/deki/files/3951/=basic_linear_blueleft.png" alt="basic_linear_blueleft.png" class="default internal"></td>
+       <td></td>
        <td>
         <div style=""> </div>
        </td>
@@ -108,7 +107,7 @@
        <td class="header">Live Demo</td>
       </tr>
       <tr>
-       <td><img src="/@api/deki/files/3952/=basic_linear_bluetopleft.png" alt="basic_linear_bluetopleft.png" class="default internal"></td>
+       <td></td>
        <td>
         <div style=""> </div>
        </td>
@@ -130,16 +129,12 @@
 
     <p>For example, here are two gradients, the first one with a direction of towards the right, and the second one has an angle of 70 degrees.</p>
 
-    <p><img src="/@api/deki/files/3953/=linear_gradient_angle.png" alt="linear_gradient_angle.png" class="default internal"></p>
-
     <p>The one on the right uses CSS like this:</p>
 
     <pre class="brush: css">background: linear-gradient(70deg, black, white);
     </pre>
 
     <p>The angle is specified as an angle between a horizontal line and the gradient line, going counter-clockwise. In other words, <code>0deg</code> creates a vertical gradient from the bottom to the top, while <code>90deg</code> generates a left to right horizontal gradient:</p>
-
-    <p><img src="/files/3811/linear_red_angles.png" alt="linear_redangles.png" class="default internal"></p>
 
     <pre class="brush: css">background: linear-gradient(&lt;angle&gt;, red, white);
     </pre>
@@ -165,7 +160,7 @@
        <td class="header">Live Demo</td>
       </tr>
       <tr>
-       <td><img src="/@api/deki/files/3955/=linear_colorstops1.png" alt="linear_colorstops1.png" class="default internal"></td>
+       <td></td>
        <td>
         <div style=""> </div>
        </td>
@@ -194,7 +189,7 @@
        <td class="header">Live Demo</td>
       </tr>
       <tr>
-       <td><img src="/@api/deki/files/3956/=linear_rainbow.png" alt="linear_rainbow.png" class="default internal"></td>
+       <td></td>
        <td>
         <div style=""> </div>
        </td>
@@ -217,8 +212,6 @@
     <p>Gradients support transparency. You can use this, for example, when stacking multiple backgrounds, to create fading effects on background images. To achieve this, you may either use <code>rgba</code> colors, <code>hsla</code> colors, or the <code>transparent</code> keyword (see <a href="/en-US/docs/Web/CSS/color_value">color values</a>). However, be aware that some browsers render the <code>transparent</code> keyword as <code>rgba(0,0,0,0)</code> instead of <code>rgba(255,255,255,0)</code>, which could cause some unexpected results (and potential dark spots) as the gradients blend together. Therefore it is safer to specify opaque gradients.</p>
 
     <p>Here is an example of using transparency in gradients:</p>
-
-    <p><img src="/files/4275/linear_multibg_transparent2.png" style="height: 119px; width: 643px;" class="default internal" alt="for Transparency and gradients example"></p>
 
     <pre class="brush: css">/* The old syntax, deprecated and prefixed, for old browsers */
     background: -<em>prefix</em>-linear-gradient(left, rgba(255,255,255,0),
@@ -251,7 +244,7 @@
        <td class="header">Live Demo</td>
       </tr>
       <tr>
-       <td><img src="/@api/deki/files/3958/=radial_gradient_even.png" alt="radial_gradient_even.png" class="default internal"></td>
+       <td></td>
        <td>
         <div style=""> </div>
        </td>
@@ -273,7 +266,7 @@
        <td class="header">Live Demo</td>
       </tr>
       <tr>
-       <td><img src="/@api/deki/files/3959/=radial_gradient_varied.png" alt="radial_gradient_varied.png" class="default internal"></td>
+       <td></td>
        <td>
         <div style=""> </div>
        </td>
@@ -299,7 +292,7 @@
        <td class="header">Live Demo</td>
       </tr>
       <tr>
-       <td><img src="/@api/deki/files/3960/=radial_ellipse_size1.png" alt="radial_ellipse_size1.png" class="default internal"></td>
+       <td></td>
        <td>
         <div style=""> </div>
        </td>
@@ -321,7 +314,7 @@
        <td class="header">Live Demo</td>
       </tr>
       <tr>
-       <td><img src="/@api/deki/files/3961/=radial_ellipse_size2.png" alt="radial_ellipse_size2.png" class="default internal"></td>
+       <td></td>
        <td>
         <div style=""> </div>
        </td>
@@ -343,7 +336,7 @@
        <td class="header">Live Demo</td>
       </tr>
       <tr>
-       <td><img src="/@api/deki/files/3962/=radial_circle_size1.png" alt="radial_circle_size1.png" class="default internal"></td>
+       <td></td>
        <td>
         <div style=""> </div>
        </td>
@@ -371,7 +364,7 @@
        <td class="header">Live Demo</td>
       </tr>
       <tr>
-       <td><img src="/@api/deki/files/3964/=repeating_linear_gradient.png" alt="repeating_linear_gradient.png" class="default internal"></td>
+       <td></td>
        <td>
         <div style=""> </div>
        </td>
@@ -385,8 +378,6 @@
     <p>Note that since no value is specified for the first color, it is automatically assigned the starting point value of each repeating portion of the gradient, i.e the effect is similar to that obtained when the starting value is given as 0px.</p>
 
     <p>Another example using the <a href="/en-US/docs/Web/CSS/repeating-linear-gradient" title="The CSS repeating-linear-gradient function creates an &lt;image> consisting of repeating gradients. It works similarly to the basic linear gradients as described by linear-gradient(), and takes the same arguments. However, it automatically repeats the color stops infinitely in both directions. The color stops' positions shift by multiples of the length of a basic linear gradient (the difference between the last color stops' position and the first)."><code>repeating-linear-gradient()</code></a> property.</p>
-
-    <p><a href="/@api/deki/files/6192/=repeat_background_gradient_checked.png" title="repeat_background_gradient_checked.png"><img src="/@api/deki/files/6192/=repeat_background_gradient_checked.png?size=thumb" style="height: 160px; width: 160px;" class="default internal" alt="repeat_background_gradient_checked.png"></a></p>
 
     <pre class="brush: css">background-color: #000;
     background-image: repeating-linear-gradient(90deg, transparent, transparent 50px,
@@ -414,7 +405,7 @@
        <td class="header">Live Demo</td>
       </tr>
       <tr>
-       <td><img src="/@api/deki/files/3965/=repeating_radial_gradient.png" alt="repeating_radial_gradient.png" class="default internal"></td>
+       <td></td>
        <td>
         <div style=""> </div>
        </td>
