Use jQuery to style paragraphs

--- a/index.html
+++ b/index.html
@@ -423,8 +423,8 @@
     </ul>
 
 
-                  </article>
-
+    </article>
+    <script src="js/jquery-3.1.0.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
